--- a/style.css
+++ b/style.css
@@ -41,9 +41,11 @@ body {
   --switch-bg-url: url(./assets/Sun.svg);
 }
 
+/*asterisco significa todos os elementos */
 body * {
   font-family: "Inter", sans-serif;
   color:var(--text-color);
+  height: 100vh; /* para não ficar faltando pedacinhos embaixo */
 }
 
 #container {
@@ -174,6 +176,18 @@ footer{
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/*media queries*/
+@media (min-width:700px){
+  :root{
+    --bg-url: url(./assets/bg-desktop-dark.jpg);
+  }
+
+  .light{
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+
 }
 
 
