--- a/style.css
+++ b/style.css
@@ -97,8 +97,7 @@ body * {
 }
 
 .light #switch button{
-  right:0;
-  left: initial;
+  animation: slide-in 0.2s forwards;
 }
 
 #switch span{
@@ -189,6 +188,18 @@ footer{
   }
 
 }
+
+@keyframes slide-in{
+  from{
+    left: 0;
+  }
+  to{
+    left: 50%;
+  }
+}
+
+
+
 
 
 
