--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background: var(--bg-url) no-repeat top center/cover;
+ 
   /*background-image: url(./assets/bg-mobile.jpg);
   background-repeat: no-repeat;
   background-position: top center; 
@@ -10,6 +11,8 @@ body {
   */
 
   /* chamado de shorthand, podemos simplificar todo o codigo de background em um só linha, seguindo a ordem background: color image repeat position */
+
+   height: 100vh; /* para não ficar faltando pedacinhos embaixo. essa parte do código havia bugado o projeto porque eu havia aplicado em 'body *' */
 }
 
 * {
@@ -45,7 +48,7 @@ body {
 body * {
   font-family: "Inter", sans-serif;
   color:var(--text-color);
-  height: 100vh; /* para não ficar faltando pedacinhos embaixo */
+
 }
 
 #container {
@@ -93,11 +96,15 @@ body * {
   top: 50%;
   left: 0;
   z-index: 1;
-  
+  animation: slide-back 0.2s;
 }
 
 .light #switch button{
   animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover{
+  outline: 8px solid var(--links-hover-background);
 }
 
 #switch span{
@@ -195,6 +202,15 @@ footer{
   }
   to{
     left: 50%;
+  }
+}
+
+@keyframes slide-back{
+  from{
+    left: 50%;
+  }
+  to{
+    left: 0%;
   }
 }
 
